website/versioned_docs/version-2.4.x/docs/introduction/getting-help.mdx
---
    title: Getting help
    position: 4
---

How to engage with the Pants community.

---

The [Pants community](doc:the-pants-community) is friendly, welcoming, and passionate about improving the craft of software engineering. If you need help with anything Pants-related, you've come to the right place.  We'd love to hear from you!
[block:api-header]
{
  "title": "Slack"
}
[/block]
The best place to get help is the Pants project's Slack workspace. You can join using [this link](https://join.slack.com/t/pantsbuild/shared_invite/zt-d0uh0mok-RLvVosDiX6JDpvStH~bFBA).

Feel free to optionally introduce yourself in `#welcome`. You can use `#general` to ask questions or to share feedback.
[block:api-header]
{
  "title": "Mailing list"
}
[/block]
You can join the `pants-devel@googlegroups.com` mailing list [here](https://groups.google.com/forum/#!forum/pants-devel). This is used mostly for announcements and for us to solicit user feedback.
[block:api-header]
{
  "title": "GitHub"
}
[/block]
Pants is an open-source software project, developed at [https://github.com/pantsbuild/pants](https://github.com/pantsbuild/pants).

If you discover a bug with Pants or have a feature request, feel free to [file an issue](https://github.com/pantsbuild/pants/issues). Please check first if a similar issue has already been filed; if it has, please comment so that we know to bump the issue in priority.
[block:api-header]
{
  "title": "YouTube"
}
[/block]
We also have a [Pants Build YouTube channel](https://www.youtube.com/channel/UCCcfCbDqtqlCkFEuENsHlbQ) with a variety of concise tutorials, introductions to core concepts, and tips. Subscribe to the channel to get notified of additions.

Have an idea or request for a future video topic? Bring it up on the Slack! We'd love to know what you're wondering about.
[block:api-header]
{
  "title": "About us"
}
[/block]
[Learn more](doc:the-pants-community) about the Pants community.
